# aoc-2021

./: aoc-2021.cabal  default.nix  shell.nix
src/: Common.hs  Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs
src/Day1/: Main.hs
src/Day10/: Main.hs
src/Day11/: Main.hs
src/Day12/: Main.hs
src/Day13/: Main.hs
src/Day14/: Main.hs
src/Day15/: Main.hs
src/Day16/: Main.hs
src/Day17/: Main.hs
src/Day18/: Main.hs
src/Day2/: Main.hs
src/Day3/: Main.hs
src/Day4/: Main.hs
src/Day5/: Main.hs
src/Day6/: Main.hs
src/Day7/: Main.hs
src/Day8/: Main.hs
src/Day9/: Main.hs
