name:                aoc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/robbassi/aoc-2021
license:             BSD3
license-file:        LICENSE
author:              Rob Bassi
maintainer:          rob.bassi.89@gmail.com
copyright:           2021 Rob Bassi
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Common
  build-depends:       base >= 4.7 && < 5, split == 0.2.3.4, matrix == 0.3.6.1, vector == 0.12.3.1

executable aoc-day1
  hs-source-dirs:      src
  main-is:             Day1/Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, matrix == 0.3.6.1, vector == 0.12.3.1
  other-modules:
    Common
    Day1

executable aoc-day2
  hs-source-dirs:      src
  main-is:             Day2/Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  other-modules:
    Common
    Day2     
  default-extensions:
    RecordWildCards

executable aoc-day3
  hs-source-dirs:      src
  main-is:             Day3/Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  other-modules:
    Common
    Day3

executable aoc-day4
  hs-source-dirs:      src
  main-is:             Day4/Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, split == 0.2.3.4, matrix == 0.3.6.1, vector == 0.12.3.1
  other-modules:
    Common
    Day4

executable aoc-day5
  hs-source-dirs:      src
  main-is:             Day5/Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, split == 0.2.3.4, matrix == 0.3.6.1, vector == 0.12.3.1
  other-modules:
    Common
    Day5

executable aoc-day6
  hs-source-dirs:      src
  main-is:             Day6/Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, split == 0.2.3.4, matrix == 0.3.6.1, vector == 0.12.3.1, containers
  other-modules:
    Common