name:                aoc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/robbassi/aoc-2021
license:             BSD3
license-file:        LICENSE
author:              Rob Bassi
maintainer:          rob.bassi.89@gmail.com
copyright:           2021 Rob Bassi
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable aoc-day1
  hs-source-dirs:      src
  main-is:             Day1/Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  other-modules:
    Day1

executable aoc-day2
  hs-source-dirs:      src
  main-is:             Day2/Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  other-modules:
    Day2
  extensions:
    RecordWildCards

executable aoc-day3
  hs-source-dirs:      src
  main-is:             Day3/Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  other-modules:
    Day3
  extensions:
    RecordWildCards
    NamedFieldPuns

executable aoc-day4
  hs-source-dirs:      src
  main-is:             Day4/Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , split
  other-modules:
    Day4
  extensions:
    RecordWildCards
    NamedFieldPuns
    TupleSections 

executable aoc-day5
  hs-source-dirs:      src
  main-is:             Day5/Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , split
  other-modules:
    Day5

executable aoc-day6
  hs-source-dirs:      src
  main-is:             Day6/Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , split
  extensions:
    RecordWildCards

executable aoc-day7
  hs-source-dirs:      src
  main-is:             Day7/Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , split
  extensions:
    RecordWildCards
